change terminology to RA

--- a/wi/pkg_validation.qmd
+++ b/wi/pkg_validation.qmd
@@ -9,21 +9,21 @@ execute:
   message: false
 ---
 
-This page functions as the standard operating procedure for the risk assessment of R 
+This page functions as the work instruction for the risk assessment of R 
 packages within the SCTO Statistics & Methodology Platform framework. 
 
 In order to perform a risk assessment: 
 
 - **first, check whether the package has already been risk assessed**. This can be done by any of the following methods:
   - the `check_session` function from the [R package `validation`](https://swissclinicaltrialorganisation.github.io/validation/){target="_blank"} can be used from within your R session to check if a package has been risk assessed.
-  - check the table on the [home page](../index.qmd){target="_blank"} of this site
+  - check the table on the [Package assessment page](../results/pkgassessment.qmd){target="_blank"} of this site
   - check for the package in the [package validation GitHub repository](https://www.github.com/SwissClinicalTrialOrganisation/pkg_validation/issues){target="_blank"} by searching for it among the issues using the search bar towards the top of the page (remember to remove the is:open filter). E.g. to search for dplyr, the search might be `is:issue dplyr`
 - **if it has been risk assessed**, check the associated risk and consider whether any functions within package need additional testing for your use case.
 - **if it has not been risk assessed**, go to the [package validation GitHub repository](https://www.github.com/SwissClinicalTrialOrganisation/pkg_validation/issues){target="_blank"}
   - click the green "New issue" button (towards the top right)
-  - select the New package validation template by clicking the green Get started button on the right
+  - select the New package risk assessment template by clicking the green Get started button on the right
   - fill in the form, following the instructions provided. Additional notes on the risk metrics can be found on the [Risk metrics page](../sop/risk_metrics.qmd).
-    - Note that the [R package `validation`](https://swissclinicaltrialorganisation.github.io/validation/){target="_blank"} contains various useful functions to help with the validation process. Especially useful are:
+    - Note that the [R package `validation`](https://swissclinicaltrialorganisation.github.io/validation/){target="_blank"} contains various useful functions to help with the risk assessment process. Especially useful are:
       - `get_n_deps`, which returns the number of dependencies of a package,
       - `get_12month_downloads` which returns the number of downloads of a package in the last 12 months, and 
       - `get_release_date` finds the release date of a package.
@@ -35,7 +35,7 @@ flowchart TD
   A[Identify the package that may need risk assessment] --> B(Check whether the package has already been risk assessed)
   B --> C1("`Within your R session, load the package and use the function 
   <span style="font-family:Courier; font-size: 80%">validation::check_session()</span>`")
-  B --> C2(Check whether the package is listed on the <a href='index.html'>home page</a>)
+  B --> C2(Check whether the package is listed on the Package assessments page)
   B --> C3(Check for an issue on the <a href='https://github.com/SwissClinicalTrialOrganisation/pkg_validation/issues'>GitHub</a>)
   C1 --> D(RA exists?)
   C2 --> D
