--- a/wi/testing.qmd
+++ b/wi/testing.qmd
@@ -14,6 +14,19 @@ The `validation` package contains a set of functions to assist in the running an
 
 Tests are written using functions from the [testthat](https://testthat.r-lib.org/) package, and can be downloaded, run, and reported using the functions in the `validation` package.
 
+## High level summary
+
+This section gives a very high level overview of the steps in the process. Refer to the following sections for more in depth information.
+
+1. fork the validation_tests repository to your own GitHub account
+2. clone the forked repository to your local machine
+3. use `validation::test_skeleton()` to create the necessary files for testing a new package or function
+4. write the tests using the `testthat` package
+5. test your new tests with `validation::test()`
+6. commit your changes to git and push them to your GitHub fork
+7. create a pull request to the validation_tests repository
+8. address any issues highlighted by the reviewer
+
 ## Core principles
 
 - the unit of testing is the function, not the package
