--- a/index.qmd
+++ b/index.qmd
@@ -3,7 +3,17 @@ title: "SCTO Computerized Systems Validation Policy for R"
 editor_options:
   markdown:
     wrap: 72
-
+format: 
+  html: default
+  docx: default
+  # pdf: default
+  # typst: default
+format-links:
+  - html
+  - format: typst
+    text: PDF
+    icon: file-pdf
+    target: "_blank"
 execute:
   echo: false
   message: false
@@ -720,6 +730,35 @@ d |>
 ```
 
 
+
+::: {.content-visible when-format="typst"}
+
+```{=typst}
+
+#let notest = table.cell(fill: rgb("#91cf60"))[No functuion testing required]
+#let test = table.cell(fill: rgb("#fc8d59"))[Function testing required]
+#align(center, [
+#table(
+  columns: 5,
+  
+  stroke: (x, y) => (
+    left: 0pt,
+    right: 0pt,
+    top: if y == 2 { 1pt } else { if y == 1 and x > 1 { 1pt } else { 0pt }},
+    bottom: 1pt
+  ),
+  
+  [], [], table.cell(colspan: 3, [Package risk]),
+  [],[],[Low],[Medium],[High],
+  table.cell(rowspan: 3, align: horizon, [Product risk]), [Low], notest, notest, notest,
+  [Medium], notest, notest , test,
+  [High], notest, test , test,
+)
+])
+
+```
+
+:::
 
 ##  User Training
 
